--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,51 @@
 html {
   box-sizing: border-box;
 }
+h1{
+  font-size: 24px;
+  color: purple;
+  font-family: sans-serif;
+  align-self: center;
+}
+
+nav ul{
+  font-size:2em;
+  font-family: sans-serif;
+  background-color: lightblue;
+  position:fixed;
+  top: 0;
+
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+  align-self: center;
+  color: violet;
+  width: 100%;
+
+}
+#content{
+  font-size: 1.5em;
+  font-family: sans-serif;
+  align-self: center;
+
+
+
+}
+ul{
+  font-size:1.5;
+  font-family: sans-serif;
+  align-items: center;
+}
+footer ul{
+  font-size:1em;
+  font-family: sans-serif;
+  background-color: lightblue;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+  align-self: center;
+  color: violet;
+  width: 100%;
+}
 
 /*put all other styles below this line, please*/
