--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,31 @@ nav ul{
   width: 100%;
 
 }
-#content{
+#content section{
   font-size: 1.5em;
   font-family: sans-serif;
+  display: inline-flex;
   align-self: center;
-
-
+  color:purple;
 
 }
+p{
+  display: inline-flex;
+  align-self: center;
+  margin: 3em;
+}
+#submit{
+  display: inline-flex;
+  align-self: center;
+  margin: 3em;
+}
+textarea{
+  display: inline-flex;
+  align-self: center;
+  margin: 3em;
+
+}
+
 ul{
   font-size:1.5;
   font-family: sans-serif;
