--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,54 @@ nav ul{
   width: 100%;
 
 }
+
+#content{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'helvetica', sans-serif;
+}
+
 #content section{
   font-size: 1.5em;
   font-family: sans-serif;
   display: inline-flex;
   align-self: center;
   color:purple;
+}
+
+#content > div{
+    padding: 1em;
+    width: 30vw;
 
 }
+
+#content ul{
+    margin-top: 1em;
+}
+
+#content li{
+    list-style-type: disc;
+    padding: 0.25em 0;
+}
+
+form {
+    width: 100%;
+    overflow: hidden;
+}
+
+.name{
+    font-family: serif;
+    font-weight: bold;
+}
+
+
+img {
+    width: 100%;
+}
+
 p{
   display: inline-flex;
   align-self: center;
